# sssd-test-framework

./: .gitignore  .readthedocs.yml  conftest.py  pyproject.toml  readme.md  requirements.txt  tox.ini
.github/workflows/: ci.yml
docs/: api.rst  concepts.rst  conf.py  config.rst  marks.rst  running-tests.rst  writing-tests.rst
docs/course/: course.rst  test_course.py
docs/guides/: check-sssd-functionality.rst  index.rst  pam.rst  skipping-conditional-tests.rst  testing-authentication.rst  testing-autofs.rst  testing-dbus.rst  testing-gpo.rst  testing-identity.rst  testing-ipa-trust.rst  testing-ldap-krb5.rst  testing-local-overrides.rst  testing-local-users.rst  testing-netgroups.rst  testing-offline.rst  testing-pam.rst  testing-passkey.rst  testing-sss_override.rst  using-roles.rst  using-ssh.rst
sssd_test_framework/: config.py  markers.py  topology.py  topology_controllers.py
sssd_test_framework/hosts/: __init__.py  ad.py  base.py  client.py  ipa.py  kdc.py  keycloak.py  ldap.py  nfs.py  samba.py
sssd_test_framework/misc/: __init__.py  augtool.py  common.py  globals.py  ssh.py
sssd_test_framework/roles/: __init__.py  ad.py  base.py  client.py  generic.py  ipa.py  kdc.py  keycloak.py  ldap.py  nfs.py  samba.py
sssd_test_framework/utils/: __init__.py  adcli.py  authentication.py  authselect.py  automount.py  chrony.py  gdm.py  idp.py  ip.py  ipa_ca.py  ldap.py  ldb.py  local_users.py  network.py  override.py  pam.py  realmd.py  samba.py  sbus.py  smartcard.py  socket.py  sshd.py  sss_override.py  sssctl.py  sssd.py  (+5 more)
tests/: test_misc.py  test_tools.py
(+2 files in other folders)
